# qkb

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  README.md  biome.json  package-lock.json  package.json  pyproject.toml  tsconfig.build.json  tsconfig.json  vitest.config.ts
.claude/commands/: execute-mvp.md
.github/workflows/: ci-legacy-python.yml  ci.yml  gitleaks.yml  release-python.yml  release.yml
Formula/: qkb.rb
docs/: DESIGN.md  PRD.md
docs/adr/: architecture-decisions.md  bm25-architecture-research.md
docs/plans/: 2026-07-06-phase1-mvp.md  2026-07-20-typescript-rewrite.md  EXECUTION-BRIEF.md
legacy/python/: README.md  pyproject.toml
legacy/python/scripts/: golden_queries.example.yaml  golden_queries.py
legacy/python/src/qkb/: cli.py  db.py
legacy/python/src/qkb/embed/: __init__.py  fake.py  fastembed.py  models.py
legacy/python/src/qkb/ingest/: chunker.py  storage.py
legacy/python/src/qkb/search/: bm25.py  hybrid.py  results.py  retrieval.py  service.py  vector.py
legacy/python/tests/: conftest.py  test_chunker.py  test_cli.py  test_embed_models.py  test_embed_templates.py  test_fake_provider.py  test_fastembed_integration.py  test_fastembed_provider.py  test_hybrid.py  test_local_provider_integration.py  test_parser.py  test_storage.py  test_vector.py
scripts/: golden-queries.ts
src/: cli.ts  config.ts  types.ts
src/cli/: contexts.ts  get.ts  ingest.ts  mcp.ts  progress.ts  search.ts  shared.ts  status.ts
src/db/: schema.ts  storage.ts
src/embed/: fake.ts  llama.ts  models.ts  ollama.ts  openai.ts  provider.ts  templates.ts  types.ts
src/ingest/: chunker.ts  parser.ts  pipeline.ts
src/qkb/: cli.py  config.py  db.py  models.py
src/qkb/embed/: __init__.py  base.py  fastembed.py  local.py  ollama.py  templates.py
src/qkb/ingest/: parser.py  pipeline.py  storage.py
src/qkb/search/: filters.py  hybrid.py  results.py  retrieval.py  service.py  vector.py
src/qkb/server/: mcp.py
src/search/: bm25.ts  errors.ts  filters.ts  hybrid.ts  hydrate.ts  retrieval.ts  service.ts  vector.ts
src/server/: mcp.ts
test/: bm25.test.ts  chunker.test.ts  cli.test.ts  config.test.ts  db.test.ts  filters.test.ts  golden-queries.test.ts  hybrid.test.ts  hydrate.test.ts  mcp.test.ts  native-stack.test.ts  parser.test.ts  pipeline.test.ts  retrieval.test.ts  service.test.ts  storage.test.ts  vector.test.ts  workflows.test.ts
test/cli/: progress.test.ts  shared.test.ts
test/embed/: fake.test.ts  llama.test.ts  models.test.ts  ollama.test.ts  openai.test.ts  provider.test.ts  templates.test.ts
test/integration/: llama.integration.test.ts  ollama.integration.test.ts  openai.integration.test.ts
tests/: test_bm25.py  test_cli.py  test_config.py  test_db.py  test_embed.py  test_fastembed_integration.py  test_filters.py  test_hybrid.py  test_local_provider.py  test_local_provider_integration.py  test_mcp.py  test_ollama_provider.py  test_parser.py  test_pipeline.py  test_results.py  test_retrieval.py  test_service.py  test_storage.py  test_vector.py  test_version.py
(+1 files in other folders)
